# fontsplitta

./: .gitignore  README.md  font-face.css.templete  fontsplitta.py  get_unicode_ranges_from_google_fonts.py  mise.toml  pyproject.toml  requirements.txt  test_server.py  web_font_splitter.py  wfs.py
.claude/: settings.local.json
.github/workflows/: release.yml
fontsplitta/: __init__.py  __main__.py  test_server.py
modules/: google_fonts.py  split.py  test_server.py
tools/: deno.jsonc  update-homebrew.ts
