[tool.poetry]
name = "fontsplitta"
version = "0.1.1"
description = "fontsplitta is a command-line tool that splits web fonts and generates CSS."
authors = ["shunirr <git@s5r.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.9"
brotli = "^1.1.0"
fonttools = "^4.56.0"
urllib3 = "^2.3.0"
click = "^8.1.8"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"
setuptools = "^75.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fontsplitta = "fontsplitta:main"